# swagger/swagger.json
@@ -93,7 +93,7 @@
                     "company"
                 ],
                 "description": "find object by companyID",
-                "operationId": "CompanyController.Get",
+                "operationId": "CompanyController.GetCompany",
                 "parameters": [
                     {
                         "in": "query",
@@ -137,7 +137,7 @@
                         "description": "The body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/templateType.updateCompanyForm"
+                            "$ref": "#/definitions/templateType.UpdateCompanyForm"
                         }
                     }
                 ],
@@ -225,36 +225,27 @@
                 }
             }
         },
-        "/employee/getSlice": {
+        "/employee/GetEmployee": {
             "get": {
                 "tags": [
                     "employee"
                 ],
                 "description": "get user by uid",
-                "operationId": "EmployeeController.GetSlice",
+                "operationId": "EmployeeController.GetEmployee",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "uid",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "query",
                         "name": "companyID",
                         "description": "The company ID",
                         "required": true,
                         "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "start",
-                        "description": "Start point",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    {
-                        "in": "query",
-                        "name": "count",
-                        "description": "Number of elements",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
                     }
                 ],
                 "responses": {
@@ -340,7 +331,7 @@
                         "name": "body",
                         "description": "The company information",
                         "schema": {
-                            "$ref": "#/definitions/templateType.updateEmployeeForm"
+                            "$ref": "#/definitions/templateType.UpdateEmployeeForm"
                         }
                     }
                 ],
@@ -358,40 +349,6 @@
             }
         },
         "/employee/{uid}": {
-            "get": {
-                "tags": [
-                    "employee"
-                ],
-                "description": "get user by uid",
-                "operationId": "EmployeeController.Get",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "uid",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "companyID",
-                        "description": "The company ID",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/company.Employee"
-                        }
-                    },
-                    "403": {
-                        "description": ":uid is empty"
-                    }
-                }
-            },
             "delete": {
                 "tags": [
                     "employee"
@@ -482,29 +439,29 @@
             "format": "int32",
             "type": "integer"
         },
-        "templateType.updateCompanyForm": {
-            "title": "updateCompanyForm",
+        "templateType.UpdateCompanyForm": {
+            "title": "UpdateCompanyForm",
             "type": "object",
             "properties": {
-                "address": {
+                "Address": {
                     "type": "string"
                 },
-                "name": {
+                "Name": {
                     "type": "string"
                 }
             }
         },
-        "templateType.updateEmployeeForm": {
-            "title": "updateEmployeeForm",
+        "templateType.UpdateEmployeeForm": {
+            "title": "UpdateEmployeeForm",
             "type": "object",
             "properties": {
-                "address": {
+                "Address": {
                     "type": "string"
                 },
-                "dateOfBirth": {
+                "DateOfBirth": {
                     "$ref": "#/definitions/company.Date"
                 },
-                "name": {
+                "Name": {
                     "type": "string"
                 }
             }
